--- a/Natas/password.yml
+++ b/Natas/password.yml
@@ -7,7 +7,16 @@ natas13: trbs5pCjCrkuSknBBKHhaBxq6Wm1j3LC
 natas14: z3UYcr4v4uBpeX8f7EZbMHlzK4UR2XtQ
 natas15: SdqIqBsFcz3yotlNYErZSZwblkm0lrvx
 natas16: hPkjKYviLQctEW33QmuXL6eDVfMW4sGo
+natas17: EqjHJbo7LFNb8vwhHb9s75hokh5TF0OC
+natas18: 6OG1PbKdVjyBlpxgD4DDbRG6ZLlCGgCJ
+natas19: tnwER7PdfWkxsG4FNWUtoAZ9VyZTJqJr
 natas2: TguMNxKo1DSa1tujBLuZJnDUlCcUAPlI
+natas20: p5mCvP7GS2K6Bmt3gqhM2Fc1A5T8MVyw
+natas21: BPhv63cKE1lkQl04cE5CuFTzXe15NfiH
+natas22: d8rwGBl0Xslg3b76uh3fEbSlnOUBlozz
+natas23: dIUQcI3uSus1JEOSSWRAEXBG8KbR8tRs
+natas24: MeuqmfJ8DDKuTr5pcvzFKSwlxedZYEWd
+natas25: ckELKUWZUfpOv6uxS6M7lXBpBssJZ4Ws
 natas3: 3gqisGdR0pjm6tpkDKdIWO2hSvchLeYH
 natas4: QryZXc2e0zahULdHrtHxzyYkj59kUxLQ
 natas5: 0n35PkggAPm2zbEpOU802c0x0Msn1ToK
