--- a/Natas/password.yml
+++ b/Natas/password.yml
@@ -17,6 +17,7 @@ natas22: d8rwGBl0Xslg3b76uh3fEbSlnOUBlozz
 natas23: dIUQcI3uSus1JEOSSWRAEXBG8KbR8tRs
 natas24: MeuqmfJ8DDKuTr5pcvzFKSwlxedZYEWd
 natas25: ckELKUWZUfpOv6uxS6M7lXBpBssJZ4Ws
+natas26: cVXXwxMS3Y26n5UZU89QgpGmWCelaQlE
 natas27: u3RRffXjysjgwFU6b9xa23i6prmUsYne
 natas28: 1JNwQM1Oi6J6j1k49Xyw7ZN6pXMQInVj
 natas3: 3gqisGdR0pjm6tpkDKdIWO2hSvchLeYH
