--- a/Natas/password.yml
+++ b/Natas/password.yml
@@ -20,6 +20,7 @@ natas25: ckELKUWZUfpOv6uxS6M7lXBpBssJZ4Ws
 natas26: cVXXwxMS3Y26n5UZU89QgpGmWCelaQlE
 natas27: u3RRffXjysjgwFU6b9xa23i6prmUsYne
 natas28: 1JNwQM1Oi6J6j1k49Xyw7ZN6pXMQInVj
+natas29: 31F4j3Qi2PnuhIZQokxXk1L3QT9Cppns
 natas3: 3gqisGdR0pjm6tpkDKdIWO2hSvchLeYH
 natas4: QryZXc2e0zahULdHrtHxzyYkj59kUxLQ
 natas5: 0n35PkggAPm2zbEpOU802c0x0Msn1ToK
