--- a/Natas/password.yml
+++ b/Natas/password.yml
@@ -23,6 +23,7 @@ natas28: 1JNwQM1Oi6J6j1k49Xyw7ZN6pXMQInVj
 natas29: 31F4j3Qi2PnuhIZQokxXk1L3QT9Cppns
 natas3: 3gqisGdR0pjm6tpkDKdIWO2hSvchLeYH
 natas30: WQhx1BvcmP9irs2MP9tRnLsNaDI76YrH
+natas31: m7bfjAHpJmSYgQWWeqRE2qVBuMiRNq0y
 natas4: QryZXc2e0zahULdHrtHxzyYkj59kUxLQ
 natas5: 0n35PkggAPm2zbEpOU802c0x0Msn1ToK
 natas6: 0RoJwHdSKWFTYR5WuiAewauSuNaBXned
