--- a/Natas/password.yml
+++ b/Natas/password.yml
@@ -24,6 +24,8 @@ natas29: 31F4j3Qi2PnuhIZQokxXk1L3QT9Cppns
 natas3: 3gqisGdR0pjm6tpkDKdIWO2hSvchLeYH
 natas30: WQhx1BvcmP9irs2MP9tRnLsNaDI76YrH
 natas31: m7bfjAHpJmSYgQWWeqRE2qVBuMiRNq0y
+natas32: NaIWhW2VIrKqrc7aroJVHOZvk3RQMi0B
+natas33: 2v9nDlbSF7jvawaCncr5Z9kSzkmBeoCJ
 natas4: QryZXc2e0zahULdHrtHxzyYkj59kUxLQ
 natas5: 0n35PkggAPm2zbEpOU802c0x0Msn1ToK
 natas6: 0RoJwHdSKWFTYR5WuiAewauSuNaBXned
