--- a/Natas/password.yml
+++ b/Natas/password.yml
@@ -26,6 +26,7 @@ natas30: WQhx1BvcmP9irs2MP9tRnLsNaDI76YrH
 natas31: m7bfjAHpJmSYgQWWeqRE2qVBuMiRNq0y
 natas32: NaIWhW2VIrKqrc7aroJVHOZvk3RQMi0B
 natas33: 2v9nDlbSF7jvawaCncr5Z9kSzkmBeoCJ
+natas34: j4O7Q7Q5er5XFRCepmyXJaWCSIrslCJY
 natas4: QryZXc2e0zahULdHrtHxzyYkj59kUxLQ
 natas5: 0n35PkggAPm2zbEpOU802c0x0Msn1ToK
 natas6: 0RoJwHdSKWFTYR5WuiAewauSuNaBXned
